[package]
name = "energy-calculator"
version = "0.1.0"
authors = ["andy5995 <andy400-dev@yahoo.com>", "Jammyjamjamman"]
edition = "2018"
description = "Educational tool for performing physics calculations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "energy_calculator"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.15"
